WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271063
REGRESSION (
276119@main
): [ macOS iOS ] http/tests/navigation/page-cache-getUserMedia-pending-promise.html is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=271063
Summary
REGRESSION (276119@main): [ macOS iOS ] http/tests/navigation/page-cache-getU...
Jay Stfleur
Reported
2024-03-15 10:08:18 PDT
Description: http/tests/navigation/page-cache-getUserMedia-pending-promise.html Is a flaky timeout on iOS and Monterey+ wk2 since
276119@main
History:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fnavigation%2Fpage-cache-getUserMedia-pending-promise.html
Diff/Image Diff/Crash Log: --- /Volumes/Data/worker/Apple-Sonoma-Release-WK2-Tests/build/layout-test-results/http/tests/navigation/page-cache-getUserMedia-pending-promise-expected.txt +++ /Volumes/Data/worker/Apple-Sonoma-Release-WK2-Tests/build/layout-test-results/http/tests/navigation/page-cache-getUserMedia-pending-promise-actual.txt @@ -1,3 +1,5 @@ +FAIL: Timed out waiting for notifyDone to be called + Tests that a page with a pending getUserMedia request is able to go into the back/forward cache. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". @@ -7,9 +9,4 @@ pagehide - entering cache pageshow - from cache PASS Page was restored from Page Cache -PASS Promised was resolved -PASS restoredFromPageCache is true -PASS successfullyParsed is true -TEST COMPLETE
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-15 10:09:13 PDT
<
rdar://problem/124698382
>
Jay Stfleur
Comment 2
2024-03-15 10:26:09 PDT
Reproducibility: I was able to reproduce using command run-webkit-tests http/tests/navigation/page-cache-getUserMedia-pending-promise.html --clobber-old-results --child-processes 10 --iteration 10 -f --exit-after-n-failures 1
Sihui Liu
Comment 3
2024-03-22 20:40:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26361
EWS
Comment 4
2024-03-24 22:13:52 PDT
Committed
276618@main
(a2555ef76ee7): <
https://commits.webkit.org/276618@main
> Reviewed commits have been landed. Closing PR #26361 and removing active labels.
Dawn Morningstar
Comment 5
2024-03-27 14:23:08 PDT
http/tests/navigation/page-cache-getUserMedia-pending-promise.html is still failing; this time text failure instead. DIFF: --- /Volumes/Data/worker/Apple-iOS-17-Simulator-Release-WK2-Tests/build/layout-test-results/http/tests/navigation/page-cache-getUserMedia-pending-promise-expected.txt +++ /Volumes/Data/worker/Apple-iOS-17-Simulator-Release-WK2-Tests/build/layout-test-results/http/tests/navigation/page-cache-getUserMedia-pending-promise-actual.txt @@ -8,8 +8,9 @@ pageshow - from cache PASS Page was restored from Page Cache PASS restoredFromPageCache is true -PASS getUserMediaRejected is true +FAIL getUserMediaRejected should be true. Was false. PASS successfullyParsed is true +Some tests failed. TEST COMPLETE
Sihui Liu
Comment 6
2024-03-28 15:27:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26580
EWS
Comment 7
2024-03-29 12:29:34 PDT
Committed
276836@main
(0d17a4e9d153): <
https://commits.webkit.org/276836@main
> Reviewed commits have been landed. Closing PR #26580 and removing active labels.
EWS
Comment 8
2024-04-23 15:02:13 PDT
Test gardening commit
277895@main
(dcc459d3e3ea): <
https://commits.webkit.org/277895@main
> Reviewed commits have been landed. Closing PR #27657 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug